@@ -3,7 +3,6 @@ package dimhol.logic.player;
 import dimhol.core.Input;
 import dimhol.entity.Entity;
 import dimhol.entity.factories.PlayerAttackFactory;
-import dimhol.logic.ai.AttackUtil;
 
 import java.util.Collections;
 import java.util.List;
@@ -18,7 +17,7 @@ public class SwordState extends AbstractState {
 
     @Override
     public Optional<State> transition(Input input) {
-        if (input.isNormalMeele()) {
+        if (input.isNormalMelee()) {
             return Optional.empty();
         }
         return Optional.of(new IdleState());
@@ -26,8 +25,7 @@ public class SwordState extends AbstractState {
 
     @Override
     public List<Entity> execute(Input input) {
-        //return List.of(new PlayerAttackFactory().createPlayerMeleeAttack(playerEntity, damage);
-        return Collections.emptyList();
+        return List.of(new PlayerAttackFactory().createMeleeAttack(this.playerEntity));
     }
 
 
